[gd_scene load_steps=18 format=3 uid="uid://ccsw6ran8ax1q"]

[ext_resource type="Script" uid="uid://bxqb782ciahlf" path="res://Final/Scripts/final.gd" id="1_qpsly"]
[ext_resource type="Texture2D" uid="uid://bxex7fkk5ijvs" path="res://Final/Sprites/tanque.png" id="2_c4gds"]
[ext_resource type="Texture2D" uid="uid://b0xt5r55yac1u" path="res://Sistema/Sprites/fondoUI.png" id="3_mxpb8"]
[ext_resource type="Shader" uid="uid://couu76j0ckis6" path="res://Inicio/intro.gdshader" id="4_uhskx"]
[ext_resource type="FontFile" uid="uid://bloqexnpqeqe0" path="res://Inicio/Panic.ttf" id="5_exiyv"]
[ext_resource type="FontFile" uid="uid://c02jnbv0ks7j" path="res://Inicio/Bugfast.otf" id="6_i82j4"]
[ext_resource type="StyleBox" uid="uid://cfeo2sqajgsij" path="res://Inicio/SCJ4jugadoresFocus.tres" id="7_cjabn"]
[ext_resource type="StyleBox" uid="uid://cvbyvbtwaigie" path="res://Inicio/SCJ4jugadoresHover.tres" id="8_f6c06"]
[ext_resource type="StyleBox" uid="uid://cfnb7qc7hnjqe" path="res://Inicio/SCJ4jugadoresPressedtres.tres" id="9_lvnes"]
[ext_resource type="StyleBox" uid="uid://bvi3fn7uoj0c6" path="res://Inicio/SCJ4jugadoresNormal.tres" id="10_sf8p8"]
[ext_resource type="StyleBox" uid="uid://88ajiona10oy" path="res://Inicio/SCJ3jugadoresFocus.tres" id="11_ou5jc"]
[ext_resource type="StyleBox" uid="uid://dbjcptanntae7" path="res://Inicio/SCJ3jugadoresHover.tres" id="12_jbeyp"]
[ext_resource type="StyleBox" uid="uid://csn8lopkh5rrq" path="res://Inicio/SCJ3jugadoresPressedtres.tres" id="13_ommc8"]
[ext_resource type="StyleBox" uid="uid://bcbdt631yhd7f" path="res://Inicio/SCJ3jugadoresNormal.tres" id="14_rype0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wtprl"]
shader = ExtResource("4_uhskx")
shader_parameter/effect_filling = 1.0
shader_parameter/angle = 90.0
shader_parameter/keep_saturation = 0.0
shader_parameter/keep_luminance = 1.0
shader_parameter/color_start = Color(1, 0.501961, 0, 1)
shader_parameter/start_pos = 0.0
shader_parameter/color_mid = Color(0.556863, 0.862745, 0.72549, 1)
shader_parameter/mid_pos = 0.5
shader_parameter/color_end = Color(0, 0.713726, 0.996078, 1)
shader_parameter/end_pos = 1.0
shader_parameter/midpos_enabled = true
shader_parameter/range_start = 0.0
shader_parameter/range_end = 1.0
shader_parameter/range_softedge = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkfnb"]
bg_color = Color(0.0392157, 0.329412, 0.415686, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_63ggs"]
shader = ExtResource("4_uhskx")
shader_parameter/effect_filling = 1.0
shader_parameter/angle = 90.0
shader_parameter/keep_saturation = 0.0
shader_parameter/keep_luminance = 1.0
shader_parameter/color_start = Color(1, 0.501961, 0, 1)
shader_parameter/start_pos = 0.0
shader_parameter/color_mid = Color(0.556863, 0.862745, 0.72549, 1)
shader_parameter/mid_pos = 0.5
shader_parameter/color_end = Color(0, 0.713726, 0.996078, 1)
shader_parameter/end_pos = 1.0
shader_parameter/midpos_enabled = true
shader_parameter/range_start = 0.0
shader_parameter/range_end = 1.0
shader_parameter/range_softedge = 0.0

[node name="Final" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qpsly")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(227, 414)
rotation = -2.3193
scale = Vector2(1.68305, 1.60247)
texture = ExtResource("2_c4gds")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 2
visibility_layer = 2
z_index = -18
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_mxpb8")
expand_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_wtprl")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_styles/panel = SubResource("StyleBoxFlat_vkfnb")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vkfnb")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_exiyv")
theme_override_font_sizes/font_size = 40
text = "RESULTADO   FINAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_63ggs")
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer2/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 30
alignment = 2

[node name="Volver a Jugar" type="Button" parent="PanelContainer2/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_i82j4")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("7_cjabn")
theme_override_styles/hover = ExtResource("8_f6c06")
theme_override_styles/pressed = ExtResource("9_lvnes")
theme_override_styles/normal = ExtResource("10_sf8p8")
text = "VOLVER A JUGAR"

[node name="Salir" type="Button" parent="PanelContainer2/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_i82j4")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("11_ou5jc")
theme_override_styles/hover = ExtResource("12_jbeyp")
theme_override_styles/pressed = ExtResource("13_ommc8")
theme_override_styles/normal = ExtResource("14_rype0")
text = "SALIR"

[connection signal="pressed" from="PanelContainer2/PanelContainer/MarginContainer/HBoxContainer/Volver a Jugar" to="." method="_on_volver_a_jugar_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/MarginContainer/HBoxContainer/Salir" to="." method="_on_salir_pressed"]
